# dicey-rust

./: README.md
dicey/: Cargo.toml  build.rs
dicey-sys/: Cargo.toml  build.rs
dicey-sys/src/: lib.rs
dicey/examples/: dicey-inspect.rs  echo.rs  load.rs  subunsub.rs  sval.rs
dicey/src/: lib.rs
dicey/src/core/: builder.rs  errors.rs  macros.rs  mod.rs  value.rs
dicey/src/ipc/: address.rs  client.rs  mod.rs  object_info.rs
dicey/src/ipc/blocking/: mod.rs
