[package]
name = "dicey"
version = "0.3.1"
edition = "2021"

[dependencies]
paste = "1.0.15"
dicey-sys = { path = "../dicey-sys" }
uuid = "1.9.1"

futures = { version = "0.3.30", optional = true }
tokio = { version = "1.38.0", optional = true }

[build-dependencies]
dicey-sys = { path = "../dicey-sys" }

[dev-dependencies]
clap = { version = "4.5.8", features = ["derive"] }
dicey = { path = ".", features = ["async"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4"] }

[features]
async = ["dep:tokio", "tokio/sync", "dep:futures"]
