[package]
name = "dicey"
version = "0.3.9"
edition = "2021"

[dependencies]
paste = "1.0.15"
uuid = "1.10.0"

futures = { version = "0.3.30", optional = true }
tokio = { version = "1.38.1", optional = true }

dicey-sys = { path = "../dicey-sys" }

[build-dependencies]
dicey-sys = { path = "../dicey-sys" }

[dev-dependencies]
clap = { version = "4.5.9", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }

dicey = { path = ".", features = ["async"] }

[features]
async = ["dep:tokio", "tokio/sync", "dep:futures"]
