[package]
name = "dicey"
version = "0.6.0"
edition = "2024"

[dependencies]
paste = "1.0.15"
uuid = "1.12.0"

futures = { version = "0.3.31", optional = true }
tokio = { version = "1.46.0", optional = true }

dicey-sys = { path = "../dicey-sys" }

[build-dependencies]
dicey-sys = { path = "../dicey-sys" }

[dev-dependencies]
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
uuid = { version = "1.12.0", features = ["v4"] }

dicey = { path = ".", features = ["async"] }

[features]
async = ["dep:tokio", "tokio/sync", "dep:futures"]
